feat: add report endpoint
