# docs/swagger.yaml
@@ -27,6 +27,13 @@ definitions:
         example: not found
         type: string
     type: object
+  dtos.MerchantCommisions:
+    properties:
+      name:
+        type: string
+      total:
+        type: number
+    type: object
   dtos.Meta:
     properties:
       page:
@@ -37,6 +44,15 @@ definitions:
         type: integer
       total_pages:
         type: integer
+    type: object
+  dtos.Report:
+    properties:
+      merchant:
+        items:
+          $ref: '#/definitions/dtos.MerchantCommisions'
+        type: array
+      total:
+        type: number
     type: object
   dtos.Response:
     properties:
@@ -176,8 +192,6 @@ paths:
       tags:
       - merchant
     get:
-      consumes:
-      - application/json
       description: This endpoint retreives a merchant by its id
       parameters:
       - description: merchant id
@@ -259,6 +273,25 @@ paths:
                   type: object
               type: object
       summary: Create Transaction
+      tags:
+      - transactions
+  /transaction/report:
+    get:
+      description: 'This endpoint retreives the commisions report: total commisions
+        generated by system and total commisions by merchant'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dtos.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dtos.Report'
+              type: object
+      summary: get commisions report
       tags:
       - transactions
   /user:
