# domain/entities/commisions-report.go
@@ -1,0 +1,10 @@
+package entities
+
+type TotalCommisions struct {
+	Total uint64
+}
+
+type MerchantCommisions struct {
+	Name  string
+	Total uint64
+}
