# presentation/transaction/controller.go
@@ -39,3 +39,21 @@ func createTransaction(c *gin.Context) {
 	)
 	dtos.OK(c, res)
 }
+
+// getCommisionsReport godoc
+//
+// @Summary		get commisions report
+// @Tags	transactions
+// @Description	This endpoint retreives the commisions report: total commisions generated by system and total commisions by merchant
+// @Produce		json
+// @Success		200		{object}	dtos.Response{data=dtos.Report}
+// @Router			/transaction/report [get]
+func getCommisionsReport(c *gin.Context) {
+
+	res, err := RetreiveCommisionsReport()
+	if err != nil {
+		dtos.Fail(c, http.StatusInternalServerError, "ERRT003", err.Error())
+	}
+
+	dtos.OK(c, res)
+}
