# presentation/transaction/routes.go
@@ -4,4 +4,5 @@ import "github.com/gin-gonic/gin"
 
 func TransactionRoutes(transaction *gin.RouterGroup) {
 	transaction.POST("/", createTransaction)
+	transaction.GET("/report", getCommisionsReport)
 }
